# M45-Core-Firmware

./: .gitattributes  .gitignore  ATTRIBUTION.md  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_NOTICES.md  TLS-support.md  sdkconfig.defaults
.github/workflows/: pages.yml  release-firmware.yml
docs/: FLASHING.md  USAGE.md  flash.html  index.html
scripts/: README.md  benchmark-hashrate.sh  benchmark-web.sh  build-firmware.sh  check-environment.sh  clean-builds.sh  flash-firmware.sh  flash-release.py  monitor-serial.sh  setup-esp-idf.sh  show-firmware-size.sh
scripts/lib/: common.sh
scripts/tools/: convert_lcd_backgrounds.py  embed_web_assets.py  enforce_sdkconfig_policy.py  generate_build_info.py  generate_lcd_font.py  generate_lcd_palette.py  size-summary.py
src/: CMakeLists.txt  app_state.h  display_ui.c  display_ui_lcd_core.inc  display_ui_lcd_flush.inc  display_ui_lcd_graph.inc  display_ui_pages.inc  display_ui_panel.inc  display_ui_render.inc  display_ui_ssd1306_flush.inc  display_ui_update.inc  hex_utils.c  hex_utils.h  idf_main.c  miner_candidate_loop_xtensa.S  network.c  status_text.c  stratum_miner.c  stratum_miner_engine.inc  stratum_miner_hw_sha.inc  stratum_miner_json_hex.inc  stratum_miner_parse.inc  stratum_miner_payout.inc  stratum_miner_protocol.inc  stratum_miner_selfcheck.inc  stratum_miner_session.inc  stratum_miner_sha.inc  stratum_miner_share_queue.inc  stratum_miner_synthetic.inc  stratum_miner_target.inc  stratum_miner_tasks.inc  stratum_miner_text_io.inc  web_server.c  web_server_api.inc  web_server_form.inc  web_server_format.inc  web_server_pages.inc  web_server_render.inc  web_server_routes.inc
web/: footer.html  licenses_page.html  settings_page.html  setup_page.html  stats_page.html  styles.css  themes.html  toolbar.html
